      >   local replace, incoming edit upon update
M       vbm_vol_partvol.m
M       vbm_vol_pbt.m

(1)  Updated cmd line plot (vbm_vol_cmd) for detailed output (vbm.extopts.verb)
     of the partitioning (vbm_vol_partvol), the skull-stripping (vbm_vol_gcut2
     in cg_write_vol), and the ROI estimation.
(2)  Updated partition and skull-stripping functions. Removed errors and inc. 
     calculation speed. Add resolution variable (vbm.extopts.vx_res), where 
     images with higher resolutions are reduce to the half resolution.     
------------------------------------------------------------------------
r553 | dahnke | 2013-12-21 19:49:46

 M      .
M       CHANGES.txt
M       cg_vbm_batch.m
M       cg_vbm_defaults.m
M       cg_vbm_write.m
 M      fsaverage/lh.central
 M      fsaverage/lh.central.gii
 M      fsaverage/rh.central
 M      fsaverage/rh.central.gii
M       sanlmMex.mexmaci64
M       vbm_io_cmd.m
M       vbm_io_cprintf.m
M       vbm_surf_createCS.m
M       vbm_tst_pre.m
M       vbm_vol_ROIval.c
A       vbm_vol_ROIval.mexmaci64
M       vbm_vol_partvol.m
M       vbm_vol_pbt.m

(1)  Updated cmd line plot (vbm_vol_cmd) for detailed output (vbm.extopts.verb)
     of the partitioning (vbm_vol_partvol), the skull-stripping (vbm_vol_gcut2
     in cg_write_vol), and the ROI estimation.
(2)  Updated partition and skull-stripping functions. Removed errors and inc. 
     calculation speed. Add resolution variable (vbm.extopts.vx_res), where 
     images with higher resolutions are reduce to the half resolution.     
------------------------------------------------------------------------
r553 | dahnke | 2013-12-21 19:50:17

M       CHANGES.txt
M       cg_vbm_write.m
M       vbm_stat_nanmean.m
M       vbm_stat_nanstd.m
M       vbm_surf_createCS.m
M       vbm_tst_pre.m
 M      vbm_vol_ROIval.mexmaci64
RM      vbm_vol_eidist.mexmaci64

Corrected minor errors.
------------------------------------------------------------------------
r554 | dahnke | 2014-01-08 17:27:43