@@ -28,12 +28,14 @@ h2  = uimenu(h0,...
 	'Tag',		'Write segmentations',...
 	'CallBack','spm_jobman(''interactive'','''',''spm.tools.vbm.write'');',...
 	'HandleVisibility','on');
+if 0
 h3  = uimenu(h0,...
 	'Label',	'Process longitudinal data',...
 	'Separator',	'off',...
 	'Tag',		'Process longitudinal data',...
 	'CallBack','spm_jobman(''interactive'','''',''spm.tools.vbm.tools.long'');',...
 	'HandleVisibility','on');
+end
 h4  = uimenu(h0,...
 	'Label',	'Check data quality',...
 	'Separator',	'off',...
